# MATH-Scraper

./: MATH_dataset_full_testing.csv  README.md  pyproject.toml  runner.py
