[tool.poetry]
name = "math-scraper"
version = "0.1.0"
description = ""
authors = ["Nolan Tremelling nnt2109@columbia.edu"]
readme = "README.md"
packages = [{include = "math_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
black = "^23.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
